# waynaptics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  docs.md  synclient.txt
.github/workflows/: release.yml
scripts/: ci.sh  compile-hbb.sh  compile-inner.sh  package-arch-inner.sh  package-arch.sh  package-deb.sh  package-rpm.sh  package-tar.sh
src/waynaptics/: CMakeLists.txt  Makefile  atoms.cpp  config_socket.cpp  device_init.cpp  device_mgmt.cpp  dimensions.c  dump_synaptics.c  event_posting.cpp  implement.me.txt  main.cpp  mainloop.cpp  options.cpp  output_backend.cpp  ptrveloc.cpp  supportlib.cpp  synaptics_private_state.c  synclient_loader.cpp  touch_state.c  valuators.c  xi_properties.cpp
src/waynaptics-config/: CMakeLists.txt  config_model.cpp  config_model.h  double_slider.cpp  double_slider.h  int_slider.cpp  int_slider.h  main.cpp  mainwindow.cpp  mainwindow.h  scroll_edge_widget.cpp  scroll_edge_widget.h  socket_client.cpp  socket_client.h  test_area.cpp  test_area.h  test_button.cpp  test_button.h  touch_subscriber.cpp  touch_subscriber.h  touchpad_zone_widget.cpp  touchpad_zone_widget.h
src/waynaptics-config/tabs/: clickzones_tab.cpp  clickzones_tab.h  pointer_tab.cpp  pointer_tab.h  scrolling_tab.cpp  scrolling_tab.h  sensitivity_tab.cpp  sensitivity_tab.h  tapping_tab.cpp  tapping_tab.h
src/waynaptics/fakeclude/: shim.h  xf86.h
src/waynaptics/include/: accel.h  config_socket.h  device_init.h  log.h  mainloop.h  options.h  output_backend.h  ptrveloc.h  synclient_loader.h  synshared.h  touch_state.h  unique_fd.h  xi_properties.h
